spacing issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4169,7 +4169,7 @@ body.is-preload #header.alt .logo {
 	max-height: 0;
 	overflow: hidden;
 	transition: max-height 0.4s ease-out;
-	background-color: skyblue;
+	background-color: #f1f1f1;
 	font-size: 1.2em;
 	border-top-left-radius: 0px;
 	border-bottom-left-radius: 0px;
